--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,46 +3,122 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: bwaegene <brice.wge@gmail.com>             +#+  +:+       +#+         #
+#    By: bwaegene <bwaegene@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/07/18 09:48:23 by bwaegene          #+#    #+#              #
-#    Updated: 2016/12/21 14:18:28 by bwaegene         ###   ########.fr        #
+#    Updated: 2017/01/17 17:25:05 by bwaegene         ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
-CC = gcc -fPIC
+# Disable implicit rules
+.SUFFIXES:
+
+# Compiler configuration
+CC = gcc
 CFLAGS = -Wall -Wextra -Werror
-COPT = -I ./
-CDEBUG = -g
+## Flags for the C preprocessor
+CPPFLAGS = -I$(INCLUDES)
 NAME = libft.a
 
-SOURCES = $(shell ls | grep ^ft_ | grep '\.c$$')
-OBJECTS = $(shell ls | grep ^ft_ | grep '\.c$$' | sed 's/\.c$$/.o/')
+# Project related variables
+SRC_PATH =  .
+SRC_NAME =	ft_atoi.c		\
+						ft_bzero.c	\
+						ft_isalnum.c	\
+						ft_isalpha.c	\
+						ft_isascii.c	\
+						ft_isdigit.c	\
+						ft_islower.c	\
+						ft_isprint.c	\
+						ft_isspace.c	\
+						ft_isupper.c	\
+						ft_itoa.c	\
+						ft_lstadd.c	\
+						ft_lstdel.c	\
+						ft_lstdelone.c	\
+						ft_lstiter.c	\
+						ft_lstmap.c	\
+						ft_lstnew.c	\
+						ft_memalloc.c	\
+						ft_memccpy.c	\
+						ft_memchr.c	\
+						ft_memcmp.c	\
+						ft_memcpy.c	\
+						ft_memdel.c	\
+						ft_memmove.c	\
+						ft_memset.c	\
+						ft_putchar.c	\
+						ft_putchar_fd.c	\
+						ft_putendl.c	\
+						ft_putendl_fd.c	\
+						ft_putnbr.c	\
+						ft_putnbr_fd.c	\
+						ft_putstr.c	\
+						ft_putstr_fd.c	\
+						ft_range.c	\
+						ft_sqrt.c	\
+						ft_strcat.c	\
+						ft_strchr.c	\
+						ft_strclr.c	\
+						ft_strcmp.c	\
+						ft_strcpy.c	\
+						ft_strdel.c	\
+						ft_strdup.c	\
+						ft_strequ.c	\
+						ft_striter.c	\
+						ft_striteri.c	\
+						ft_strjoin.c	\
+						ft_strlcat.c	\
+						ft_strlen.c	\
+						ft_strmap.c	\
+						ft_strmapi.c	\
+						ft_strncat.c	\
+						ft_strncmp.c	\
+						ft_strncpy.c	\
+						ft_strnequ.c	\
+						ft_strnew.c	\
+						ft_strnstr.c	\
+						ft_strrchr.c	\
+						ft_strsplit.c	\
+						ft_strstr.c	\
+						ft_strsub.c	\
+						ft_strswap.c	\
+						ft_strtrim.c	\
+						ft_swap.c	\
+						ft_tolower.c	\
+						ft_toupper.c
+OBJ_PATH =  obj
+OBJ_NAME = $(SRC_NAME:.c=.o)
+SRC = $(addprefix $(SRC_PATH)/,$(SRC_NAME))
+OBJ = $(addprefix $(OBJ_PATH)/,$(OBJ_NAME))
+INCLUDES = includes
+HEADER = $(INCLUDES)/$(NAME:.a=.h)
 
-HEADERS = libft.h
+DEBUG ?= 0
+ifeq ($(DEBUG), 1)
+    CFLAGS += -g
+endif
 
 all: $(NAME)
 
-$(NAME): $(OBJECTS)
-	ar rc $(NAME) $(OBJECTS)
+$(NAME): $(OBJ)
+	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
 
-$(OBJECTS): $(SOURCES) $(HEADERS)
-	$(CC) $(CFLAGS) $(COPT) -c $(SOURCES)
+$(OBJ_PATH):
+	mkdir $@
 
-debug: $(NAME)-debug
+$(OBJ): | $(OBJ_PATH)
 
-$(NAME)-debug : $(SOURCES) $(HEADERS)
-		$(CC) $(CFLAGS) $(COPT) -o $(NAME)-debug $(CDEBUG) -c $(SOURCES)
-
-library:
-	$(CC) -shared $(OBJECTS) -o libft.so
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.c $(HEADER)
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
 .PHONY: clean
 clean:
-	/bin/rm -f $(OBJECTS)
+	$(RM) -r $(OBJ_PATH)
 
 fclean: clean
-	/bin/rm -f $(NAME) $(NAME)-debug
+	$(RM) -r $(NAME) $(NAME).dSYM
 
-re: fclean all
+re: fclean
+	$(MAKE) all
